0.1
- Change: all _PROJECT_ constants are now _APPLICATION_
- Fix:    rendering bug for disabled select fields
- Add:    visible/enabled param in setVisible() and enable() methods into WIDGET class
- Change: P4A_TOOLBAR, P4A_STANDARD_TOOLBAR and P4A_ACTIONS_TOOLBAR completely rewritten
- Update: PEAR were upgraded to latest versions (2004-09-22)
- Fix:    KHTML problem for drop down menu
- Add:    cs_CZ locale (Thank to Tomas Kuba)
- Fix:    every events for image buttons are now in the <a> tag instead <img>, better compatibility with old browsers (Thanks to Valery Sidorov)
- Add:    DB_SOURCE now can order also when you define custom queries (Thanks to Valery Sidorov)
- Fix:    object and action hidden fields are now _object and _action (Thanks to Valery Sidorov)
- Add:    support for currency type to I18N::auto_format() and I18N::auto_unformat() (Thanks to Valery Sidorov)
- Fix:    I18N_DATETIME::format_time_default() and I18N_DATETIME::format_time_short() which prevented using default parameter (NULL) to format current time (Thanks to Valery Sidorov)
- Add:    support for charset in i18n subsection (Thanks to Valery Sidorov)
- Add:    ru_RU.CP1251 and ru_RU.KOI8-R locales
- Fix:    ru_RU formats bugfixes
- Fix:    1=1 bug for Microsoft SQL Server (Thanks to Valery Sidorov)
- Fix:    FIELD now supports static ID (Thanks to Christian G. Warden)
- Add:    pt_BR locale (Thanks to Thiago Trindade)
- Add:    de_CH locale (Thanks to Dominic Lüchinger)
- Add:    du_NL locale (Thanks to Alen Toric)
- Add:    de_DE locale (Thanks to Robert Petersen)
- Add:    ro_RO locale (Thanks to Victor Vernescu)
- Add:    ru_RU locale (Thanks to Andriy Olischuk)
- Change: P4A_PROJECT_PATH is now by default equal to SCRIPT_NAME, so it's possible to pass data to a p4a application in the script call
- Fix:    some fixes in Euro notations
- Fix:    various bugfixes