@@ -424,6 +424,7 @@
 		/**
 		 * Overwrites internal data with the data arriving from the submitted mask.
 		 * @access public
+		 * @throws onFileSystemError
 		 */
 		function updateRow()
 		{
@@ -443,7 +444,12 @@
 						$target_dir = P4A_UPLOADS_DIR . '/' . $field->getUploadSubpath();
 
 						if (!is_dir($target_dir)) {
-							mkdir($target_dir, P4A_UMASK);
+							if (!System::mkDir("-p $target_dir")) {
+								$e = new P4A_ERROR("Cannot create directory \"$target_dir\"", $this, $rs);
+    							if ($this->errorHandler('onFileSystemError', $e) !== PROCEED) {
+    								die();
+    							}
+							}
 						}
 
 						$a_new_value = explode(',', substr($new_value, 1, -1 ));
@@ -453,7 +459,13 @@
 							if ($new_value !== NULL) {
 								$a_new_value[0] = get_unique_file_name( $a_new_value[0], $target_dir );
                     			$new_path = $target_dir . '/' . $a_new_value[0];
-								rename(P4A_UPLOADS_DIR . '/' . $a_new_value[1], $new_path);
+								$old_path = P4A_UPLOADS_DIR . '/' . $a_new_value[1];
+								if (!rename($old_path, $new_path)) {
+									$e = new P4A_ERROR("Cannot rename file \"$old_path\" to \"$new_path\"", $this, $rs);
+									if ($this->errorHandler('onFileSystemError', $e) !== PROCEED) {
+										die();
+									}
+								}
 								$a_new_value[1] = str_replace(P4A_UPLOADS_DIR , '', $new_path);
 								$field->setNewValue('{' . join($a_new_value, ',') . '}');
 							} else {
@@ -464,10 +476,22 @@
 								unlink($target_dir . '/' . $a_old_value[1]);
 								$field->setNewValue(NULL);
 							} elseif ($new_value!=$old_value) {
-								unlink($target_dir . '/' . $a_old_value[1]);
+								$path = $target_dir . '/' . $a_old_value[1];
+								if (!unlink($path)) {
+									$e = new P4A_ERROR("Cannot delete file \"$path\"", $this, $rs);
+									if ($this->errorHandler('onFileSystemError', $e) !== PROCEED) {
+										die();
+									}
+								}
 								$a_new_value[0] = get_unique_file_name($a_new_value[0], $target_dir);
 								$new_path = $target_dir . '/' . $a_new_value[0];
-								rename(P4A_UPLOADS_DIR . '/' . $a_new_value[1], $new_path);
+								$old_path = P4A_UPLOADS_DIR . '/' . $a_new_value[1];
+								if (!rename($old_path, $new_path)) {
+									$e = new P4A_ERROR("Cannot rename file \"$old_path\" to \"$new_path\"", $this, $rs);
+									if ($this->errorHandler('onFileSystemError', $e) !== PROCEED) {
+										die();
+									}
+								}
 								$a_new_value[1] = str_replace(P4A_UPLOADS_DIR , '', $new_path);
 								$field->setNewValue('{' . join($a_new_value, ',') . '}');
 							}
